<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/detailsPromptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new" />
    <TextView
        android:id="@+id/pidTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pidEditText"
        android:layout_alignBottom="@+id/pidEditText"
        android:layout_alignLeft="@+id/detailsPromptTextView"
        android:text="@string/pid" />

    <Button
        android:id="@+id/saveBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tNanoSecEditText"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/cancelBtn"
        android:text="Save" />

    <Button
        android:id="@+id/cancelBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveBtn"
        android:layout_alignBottom="@+id/saveBtn"
        android:layout_alignRight="@+id/tNanoSecEditText"
        android:text="@string/button2" />

    <TextView
        android:id="@+id/cNanoSecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cNanoSecEditText"
        android:layout_alignBottom="@+id/cNanoSecEditText"
        android:layout_alignLeft="@+id/cSecTextView"
        android:text="C nano" />

    <TextView
        android:id="@+id/tSecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tSecEditText"
        android:layout_alignBottom="@+id/tSecEditText"
        android:layout_alignLeft="@+id/cNanoSecTextView"
        android:text="T sec" />

    <TextView
        android:id="@+id/tNanoSecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tNanoSecEditText"
        android:layout_alignBottom="@+id/tNanoSecEditText"
        android:layout_alignLeft="@+id/tSecTextView"
        android:text="T nano" />

    <EditText
        android:id="@+id/cSecEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pidEditText"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="1" />

    <EditText
        android:id="@+id/cNanoSecEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cSecEditText"
        android:layout_below="@+id/cSecEditText"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" >
    </EditText>

    <EditText
        android:id="@+id/tSecEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cNanoSecEditText"
        android:layout_below="@+id/cNanoSecEditText"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="2" />

    <EditText
        android:id="@+id/tNanoSecEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tSecEditText"
        android:layout_below="@+id/tSecEditText"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <TextView
        android:id="@+id/cSecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cSecEditText"
        android:layout_alignBottom="@+id/cSecEditText"
        android:layout_alignLeft="@+id/pidTextView"
        android:text="C sec" />

    <EditText
        android:id="@+id/pidEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/cSecEditText"
        android:layout_below="@+id/detailsPromptTextView"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/deleteBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveBtn"
        android:layout_alignBottom="@+id/saveBtn"
        android:layout_alignLeft="@+id/tNanoSecTextView"
        android:text="Delete" />

</RelativeLayout>